Project

General

Profile

Actions

Bug #20753

closed

osd/PGLog.h: 1310: FAILED assert(0 == "invalid missing set entry found")

Added by Sage Weil almost 7 years ago. Updated over 6 years ago.

Status:
Resolved
Priority:
High
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

2017-07-23T03:07:26.123 INFO:tasks.ceph.osd.1.smithi105.stderr:/build/ceph-12.1.1-380-g5e8fa3e/src/osd/PGLog.h: In function 'static void PGLog::read_log_and_missing(ObjectStore*, coll_t, coll_t, ghobject_t, const pg_info_t&, PGLog::IndexedLog&, missing_type&, std::ostringstream&, bool, bool*, const DoutPrefixProvid
er*, std::set<std::__cxx11::basic_string<char> >*, bool) [with missing_type = pg_missing_set<true>; std::ostringstream = std::__cxx11::basic_ostringstream<char>]' thread 7f0192c89e00 time 2017-07-23 03:07:26.124701
2017-07-23T03:07:26.123 INFO:tasks.ceph.osd.1.smithi105.stderr:/build/ceph-12.1.1-380-g5e8fa3e/src/osd/PGLog.h: 1310: FAILED assert(0 == "invalid missing set entry found")
2017-07-23T03:07:26.124 INFO:tasks.ceph.osd.1.smithi105.stderr: ceph version 12.1.1-380-g5e8fa3e (5e8fa3e06b68fae1582c9230a3a8d1abc6146286) luminous (rc)
2017-07-23T03:07:26.124 INFO:tasks.ceph.osd.1.smithi105.stderr: 1: (ceph::__ceph_assert_fail(char const*, char const*, int, char const*)+0x102) [0x557467b79262]
2017-07-23T03:07:26.125 INFO:tasks.ceph.osd.1.smithi105.stderr: 2: (void PGLog::read_log_and_missing<pg_missing_set<true> >(ObjectStore*, coll_t, coll_t, ghobject_t, pg_info_t const&, PGLog::IndexedLog&, pg_missing_set<true>&, std::__cxx11::basic_ostringstream<char, std::char_traits<char>, std::allocator<char> >&, bool, bool*, DoutPrefixProvider const*, std::set<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::less<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > >, std::allocator<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > > >*, bool)+0x1cf7) [0x5574676a3817]
2017-07-23T03:07:26.125 INFO:tasks.ceph.osd.1.smithi105.stderr: 3: (PG::read_state(ObjectStore*, ceph::buffer::list&)+0x342) [0x557467650ca2]
2017-07-23T03:07:26.125 INFO:tasks.ceph.osd.1.smithi105.stderr: 4: (OSD::load_pgs()+0x8cd) [0x5574675a5ddd]
2017-07-23T03:07:26.125 INFO:tasks.ceph.osd.1.smithi105.stderr: 5: (OSD::init()+0x1fb2) [0x5574675bf622]
2017-07-23T03:07:26.125 INFO:tasks.ceph.osd.1.smithi105.stderr: 6: (main()+0x2cdb) [0x55746748826b]
2017-07-23T03:07:26.125 INFO:tasks.ceph.osd.1.smithi105.stderr: 7: (__libc_start_main()+0xf0) [0x7f01900fc830]
2017-07-23T03:07:26.125 INFO:tasks.ceph.osd.1.smithi105.stderr: 8: (_start()+0x29) [0x55746755c629]

/a/sage-2017-07-23_02:11:52-rados-wip-weight-set-distro-basic-smithi/1433217

this is based on master a few days ago. see wip-weight-set-20170721

Actions #1

Updated by Josh Durgin over 6 years ago

  • Status changed from 12 to Fix Under Review
  • Assignee set to Josh Durgin

This is just a bad assert - the missing entry was added by repair.

2017-07-23 02:59:53.754666 7f55c375d700 10 osd.1 pg_epoch: 95 pg[2.a( v 33'2604 (0'0,33'2604] local-lis/les=18/19 n=2604 ec=18/18 lis/c 18/18 les/c/f 19/90/0 18/18/18) [1,5] r=0 lpr=18 crt=33'2604 mlcod 33'2603 active+clean] do_osd_op  read 0~1048576
2017-07-23 02:59:53.761158 7f55c375d700 10 osd.1 pg_epoch: 95 pg[2.a( v 33'2604 (0'0,33'2604] local-lis/les=18/19 n=2604 ec=18/18 lis/c 18/18 les/c/f 19/90/0 18/18/18) [1,5] r=0 lpr=18 crt=33'2604 mlcod 33'2603 active+clean] rep_repair_primary_object 2:52b64836:::benchmark_data_smit
hi116_1669220_object9990:head peers osd.{1,5}
2017-07-23 02:59:53.761200 7f55c375d700 10 osd.1 pg_epoch: 95 pg[2.a( v 33'2604 (0'0,33'2604] local-lis/les=18/19 n=2604 ec=18/18 lis/c 18/18 les/c/f 19/90/0 18/18/18) [1,5] r=0 lpr=18 crt=33'2604 mlcod 33'2603 active+clean m=1] 2.a unexpectedly missing 2:52b64836:::benchmark_data_s
mithi116_1669220_object9990:head v24'604, there should be a copy on shard 5
2017-07-23 02:59:53.761253 7f55c375d700 10 osd.1 pg_epoch: 95 pg[2.a( v 33'2604 (0'0,33'2604] local-lis/les=18/19 n=2604 ec=18/18 lis/c 18/18 les/c/f 19/90/0 18/18/18) [1,5] r=0 lpr=18 crt=33'2604 mlcod 33'2603 active+clean m=1]  read got -11 / 0 bytes from obj 2:52b64836:::benchmar
k_data_smithi116_1669220_object9990:head

https://github.com/ceph/ceph/pull/16539

Actions #2

Updated by Sage Weil over 6 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF