osd/PGLog: fix inaccurate missing assert

Repair and EIO handling can add missing items after log.tail

Fixes: http://tracker.ceph.com/issues/20753
Signed-off-by: Josh Durgin <jdurgin@redhat.com>